--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,67 @@
-@import "tailwindcss";
-
+@import 'tailwindcss';
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #242424;
+
+    --surface: #f9fafb;
+    --muted: #f3f4f6;
+
+    /* Foregrounds */
+    --primary: #2563eb; /* blue-600 */
+    --primary-hover: #1e40af; /* blue-800 */
+    --secondary: #9333ea; /* purple-600 */
+    --accent: #d97706; /* amber-600 */
+    --muted-foreground: #6b7280; /* gray-500 */
+
+    /* Borders and shadows */
+    --color-border: #e5e7eb; /* gray-200 */
+    --color-shadow: rgba(0, 0, 0, 0.05);
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --font-sans: var(--font-geist-sans);
+    --font-mono: var(--font-geist-mono);
+
+    --color-surface: var(--surface);
+    --color-muted: var(--color-muted);
+
+    --color-primary: var(--primary); /* blue-600 */
+    --color-primary-hover: var(--primary-hover); /* blue-800 */
+    --color-secondary: var(--secondary); /* purple-600 */
+    --color-accent: var(--color-accent); /* amber-600 */
+    --color-muted-foreground: var(--muted-foreground); /* gray-500 */
+
+    /* Borders and shadows */
+    --color-border: #e5e7eb; /* gray-200 */
+    --color-shadow: rgba(0, 0, 0, 0.05);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
+:root.dark {
+    --background: #1c1c22;
     --foreground: #ededed;
-  }
+
+    --surface: #1f2937; /* gray-800 */
+    --muted: #374151; /* gray-700 */
+
+    /* Foregrounds */
+    --foreground: #ededed;
+    --primary: #60a5fa; /* blue-400 */
+    --primary-hover: #3b82f6; /* blue-500 */
+    --secondary: #a78bfa; /* purple-400 */
+    --accent: #fbbf24; /* amber-400 */
+    --muted-foreground: #9ca3af; /* gray-400 */
+
+    /* Borders and shadows */
+    --border: #374151; /* gray-700 */
+    --shadow: rgba(0, 0, 0, 0.7);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+    background: var(--background);
+    color: var(--foreground);
+    font-family: Arial, Helvetica, sans-serif;
+    transition: all 0.7s ease-in-out;
 }
