--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
     --background: #ffffff;
     --foreground: #242424;
 
-    --surface: #f9fafb;
+    --surface: #ffffff;
     --muted: #f3f4f6;
 
     /* Foregrounds */
@@ -43,7 +43,7 @@
     --background: #1c1c22;
     --foreground: #ededed;
 
-    --surface: #1f2937; /* gray-800 */
+    --surface: #161616; /* gray-800 */
     --muted: #374151; /* gray-700 */
 
     /* Foregrounds */
